# warehouselogistics

./: README.md  docker-compose.yml
logisticsFrontend/: Dockerfile  Program.cs  logisticsFrontend.csproj
logistics_api/: .env  Dockerfile  Setup.py  poetry.toml  pyproject.toml
logistics_api/logistics_api/: __init__.py
logistics_api/logistics_api/api/schemas/: schema_warehouse_balance.py
logistics_api/logistics_api/api/v1/: controller_balance.py  controller_deliver.py  controller_sales.py  routes.py  utility_functions_balance_calculation.py
logistics_api/logistics_api/api/v1/tests/: test_controller_balance.py
logistics_api/tests/: test_logistics_api.py
