[tool.poetry]
name = "logistics_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
ipdb = "^0.13.9"
Flask-RESTful = "^0.3.9"
webargs = "^8.0.0"
python-dotenv = "^0.18.0"
marshmallow = "^3.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[tool.poetry.scripts]
my-script = "logistics_api.Setup.py:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
